--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AshaAI Assistant</title>
+    <title>AshaAI</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/11.6.1/firebase-app-compat.js"></script>
@@ -873,7 +873,7 @@
     <div class="particles-container" id="particles-js"></div>
     
     <header>
-      <h1>AshaAI Assistant</h1>
+      <h1>AshaAI</h1>
       <div class="actions-container">
         <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="20" height="20" class="theme-light-icon">
